--- a/hello.html
+++ b/hello.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
-<body>
-    <h1> "Hello world!"</h1>
-</body>
+<html>
+    <body>
+        <h1> "Hello world!"</h1>
+    </body>
+</html>
+
