--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <h1> "Hello world!"</h1>
-    </body>
+    <head>
+       <body>
+            <h1> "Hello world!"</h1>
+        </body> 
+    </head>   
 </html>
 
