--- a/hello.html
+++ b/hello.html
@@ -1,11 +1,14 @@
 # this project was created for Android sample Course
 <!DOCTYPE html>
 <html>
-    <head>
-       <body>
+<head>
+    <body>
+            <h1> Producted by realitifamily with synergy</h1>
             <h1> "Hello world!"</h1>
-        </body> 
-    </head>   
+    </body> 
+</head>   
 </html>
 
 future future
+
+    it s my project
